Add some custom widget and shortcode options. Avatar image url, widht and height.

--- a/ypijs-wp/template/css/dialog.css
+++ b/ypijs-wp/template/css/dialog.css
@@ -36,10 +36,10 @@
     position:absolute;
     bottom:5px;
     left:5px;
-    width:35px;
-    height:35px;
+    /*width:35px;*/
+   /* height:35px;
     /*border:1px solid lightsteelblue;  */
-    background-image:url('http://0.gravatar.com/avatar/ad516503a11cd5ca435acc9bb6523536?s=34');
+   /* background-image:url('http://0.gravatar.com/avatar/ad516503a11cd5ca435acc9bb6523536?s=34');*/
 }
 
 /*Bounding box*/
